Added other pages

--- a/software.html
+++ b/software.html
@@ -44,7 +44,7 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Homepage
+			Software page
     	</div>
     	<footer>
 			Website design by Tosh Goodson
