--- a/strategy.html
+++ b/strategy.html
@@ -44,7 +44,7 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Homepage
+			Strategy page.
     	</div>
     	<footer>
 			Website design by Tosh Goodson
