--- a/hardware.html
+++ b/hardware.html
@@ -44,7 +44,7 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Homepage
+			Hardware page
     	</div>
     	<footer>
 			Website design by Tosh Goodson
