Added hardware info

--- a/hardware.html
+++ b/hardware.html
@@ -44,20 +44,35 @@
 		
 		</nav>
     	<div id="main" role="main">
-			<div>
-				<h1>Chassis</h1>
+			<h1>Lego Frame</h1>
+			<div class="hardware-info">
+				<h2>Chassis</h2>
 				<p>Our chassis features two drive motors with vertical gearboxes. The sides of the robot have two large lego wheels attached to each drive axel. The front and back of the robot have pairs of stabilizing wheels.</p>
 				<p>The initial chassis design for Lego Digital Designer is available <a href="instructions/sirlancebot.lxf">here</a>.</p>
 				<p>In addition, the automatically-generated instructions for this chassis design are available <a href="instructions/">here</a>. Because these are auto-generated instructions, they cannot be followed in a strictly linear fashion.</p>
 			</div>
-			<div>
-				<h1>Roller</h1>
+			<div class="hardware-info">
+				<h2>Roller</h2>
 				<p>Our roller mechanism is designed to spin the on-field rollers to capture territories. The mechanism uses a worm gear setup to spin three sections of wheels.</p>
 			</div>
-			<div>
-				<h1>Collector</h1>
+			<div class="hardware-info">
+				<h2>Collector</h2>
 				<p>Our collector mechanism uses a servo-controller arm to actuate the dispenser levers on the field walls. The balls are dispensed into the hopper on top of the robot. The servo arm is raised to its highest position to dump the balls from the hopper.</p>
 			</div>
+			<h1>Electronics</h1>
+			<div class="hardware-info">
+				<h2>Happyboard</h2>
+			</div>
+			<div class="hardware-info">
+				<h2>Motors</h2>
+			</div>
+			<div class="hardware-info">
+				<h2>Servo</h2>
+			</div>
+			<div class="hardware-info">
+				<h2>Gyro</h2>
+			</div>
+			
     	</div>
     	<footer>
 			Website design by Tosh Goodson
