Added software info

--- a/software.html
+++ b/software.html
@@ -44,7 +44,9 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Software page
+			<h1>Software</h1>
+			<p>We programmed our robot in C using the joyos library.</p>
+			<p>A full copy of our code is available <a href="code/SirLancebot-Final.zip">here</a>.</p>
     	</div>
     	<footer>
 			Website design by Tosh Goodson
