Added more hardware info

--- a/hardware.html
+++ b/hardware.html
@@ -62,15 +62,19 @@
 			<h1>Electronics</h1>
 			<div class="hardware-info">
 				<h2>Happyboard</h2>
+				<p>The happyboard is the microcontroller used as the brain of our robot.</p>
 			</div>
 			<div class="hardware-info">
 				<h2>Motors</h2>
+				<p>Sir Lancebot features three motors in total, two used as drive motors and one used for the rollers.</p>
 			</div>
 			<div class="hardware-info">
 				<h2>Servo</h2>
+				<p>The servo is used to control the collector mechanism.</p>
 			</div>
 			<div class="hardware-info">
 				<h2>Gyro</h2>
+				<p>The gyro is used with PID code to correct for drift as the robot drives.</p>
 			</div>
 			
     	</div>
