Added some strategy info

--- a/strategy.html
+++ b/strategy.html
@@ -44,7 +44,8 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Strategy page.
+			<h1>Strategy</h1>
+			<p>Sir Lancebot begins by driving around the field counterclockwise, exploring every territory. The robot then proceeds to drive to the nearest capturing spinner to capture the territory. Sir Lancebot will try four times to capture the territory; if it fails to capture the territory in those four tries, it will proceed to the next territory. If the robot does capture the territory, it will drive back to the center of the territory to orient itself to mine resources (collect ping pong balls). It will drive to the dispenser and attempt to dispense five balls. It will attempt this action three times until successful. After Sir Lancebot has captured the territory and mined its resources, it will proceed to the next territory to attempt the same process. After collecting 15 balls, Sir Lancebot will drive next to the center of the field and dump the balls into its goal.</p>
     	</div>
     	<footer>
 			Website design by Tosh Goodson
