Edited hardware, software, team

--- a/hardware.html
+++ b/hardware.html
@@ -44,36 +44,26 @@
 		
 		</nav>
     	<div id="main" role="main">
-			<h1>Lego Frame</h1>
+			<h1>Hardware</h1>
+			<h2>Mechanical</h2>
 			<div class="hardware-info">
-				<h2>Chassis</h2>
+				<h3>Chassis</h3>
 				<p>Our chassis features two drive motors with vertical gearboxes. The sides of the robot have two large lego wheels attached to each drive axel. The front and back of the robot have pairs of stabilizing wheels.</p>
 				<p>The initial chassis design for Lego Digital Designer is available <a href="instructions/sirlancebot.lxf">here</a>.</p>
 				<p>In addition, the automatically-generated instructions for this chassis design are available <a href="instructions/">here</a>. Because these are auto-generated instructions, they cannot be followed in a strictly linear fashion.</p>
 			</div>
 			<div class="hardware-info">
-				<h2>Roller</h2>
+				<h3>Roller</h3>
 				<p>Our roller mechanism is designed to spin the on-field rollers to capture territories. The mechanism uses a worm gear setup to spin three sections of wheels.</p>
 			</div>
 			<div class="hardware-info">
-				<h2>Collector</h2>
+				<h3>Collector</h3>
 				<p>Our collector mechanism uses a servo-controller arm to actuate the dispenser levers on the field walls. The balls are dispensed into the hopper on top of the robot. The servo arm is raised to its highest position to dump the balls from the hopper.</p>
 			</div>
-			<h1>Electronics</h1>
+			<h2>Sensors</h2>
+		
 			<div class="hardware-info">
-				<h2>Happyboard</h2>
-				<p>The happyboard is the microcontroller used as the brain of our robot.</p>
-			</div>
-			<div class="hardware-info">
-				<h2>Motors</h2>
-				<p>Sir Lancebot features three motors in total, two used as drive motors and one used for the rollers.</p>
-			</div>
-			<div class="hardware-info">
-				<h2>Servo</h2>
-				<p>The servo is used to control the collector mechanism.</p>
-			</div>
-			<div class="hardware-info">
-				<h2>Gyro</h2>
+				<h3>Gyro</h3>
 				<p>The gyro is used with PID code to correct for drift as the robot drives.</p>
 			</div>
 			
