--- a/software.html
+++ b/software.html
@@ -45,8 +45,8 @@
 		</nav>
     	<div id="main" role="main">
 			<h1>Software</h1>
-			<p>We programmed our robot in C using the joyos library.</p>
-			<p>A full copy of our code is available <a href="code/SirLancebot-Final.zip">here</a>.</p>
+			<p>Our software consisted of 3 main pieces: a VPS data collection subsystem, a navigation subsystem, and a high-level control/strategy subsystem.</p>
+			<p>A full copy of our C code is available <a href="code/SirLancebot-Final.zip">here</a>.</p>
     	</div>
     	<footer>
 			Website design by Tosh Goodson
