Added picture to homepage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		
 		</nav>
     	<div id="main" role="main">
-			Homepage
+			<img src="img/teampic.jpg" class="home-image">
+			<p>Information...</p>
     	</div>
     	<footer>
 			Website design by Tosh Goodson
