Added homepage info, victoria's bio

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
 		
 		</nav>
     	<div id="main" role="main">
-			<img src="img/teampic.jpg" class="home-image">
-			<p>Information...</p>
+			<img src="img/teampic.jpg" class="home-image" style="margin-left:15px;">
+			<p>The 6.270 2012 Autonomous Lego Robot Competition is designed to save the post-apocalyptic Earth. Our team designed Sir Lancelot to rise from Miasmador, the mines deep within the Earth, to gather resources to save the remaining humans. Sir Lancelot was designed by Tosh Goodson, Victoria Gunning, and Brian Alvarez.</p>
+
+		<p>The competition consists of six territories and two battling robots (one red team, one blue team). The robots can claim territories by spinning rollers in a specified direction. Once the territory has been claimed, that team can then collect up to five resources from that territory each minute. From there, the robot can deposit the resources on the team’s designated side.</p>
+
+		<p>Every team’s robot is built out of Legos and some provided motors. During the month, the robot is programmed in C via a “HappyBoard” microcontroller. To help navigate the field, the competition has a VPS (vision-based positioning system) that sends coordinates to all robots.</p>
     	</div>
     	<footer>
 			Website design by Tosh Goodson
