--- a/team.html
+++ b/team.html
@@ -48,13 +48,14 @@
 			<div class="bio">
 				<h3>Tosh Goodson</h3>
 				<img src="img/tosh.jpg" class="team-image">
-				<p>Tosh is a Freshman majoring in course 6-2, Electrical Engineering and Computer Science. His past experience with FIRST Robotics and years of programming experience helped out in designing a reliable robot.</p>
+				<p>Tosh is a freshman majoring in 6-2, Electrical Engineering and Computer Science. He worked PID drift correction as well as the algorithms for accurate navigation of the field. His past experience with FIRST Robotics and years of programming experience helped out in designing a reliable robot and efficient code.</p>
 				<div class="clearfix"></div>
 				
 			</div>	
 			<div class="bio">
 				<h3>Victoria Gunning</h3>
 				<img src="img/victoria.jpg" class="team-image">
+				<p>Victoria is a freshman planning on majoring in 6-3, Computer Science and Engineering. She helped mainly on building a sturdy robot and designing the resource collection system. For past experience, she participated in the DEECS FPOP (Discover Electrical Engineering and Computer Science Freshman Pre-Orientation Program). There she gained some experience designing Lego Robots.</p>
 				<div class="clearfix"></div>
 				
 			</div>
