Added Brian's bio

--- a/team.html
+++ b/team.html
@@ -62,6 +62,7 @@
 			<div class="bio">
 				<h3>Brian Alvarez</h3>
 				<img src="img/brian.jpg" class="team-image">
+				<p>Brian is (yet another) freshman at MIT. He is a rower, and worked on hardware design, high level strategy and robot/code troubleshooting. He plans to major in 6-2 (EE/CS), and minor in @ (MechE). Brian competed at FIRST Tech challenge in high school, FIRST Lego League in middle school, and won state championships in both. He hails from Washington and the beautiful Pacific Northwest.</p>
 				<div class="clearfix"></div>
 				
 			</div>
