Added brian's content

--- a/software.html
+++ b/software.html
@@ -45,6 +45,8 @@
 		</nav>
     	<div id="main" role="main">
 			<h1>Software</h1>
+			
+			<h2>Overview</h2>
 			<p>Our software consisted of 3 main pieces that ran as separate threads: a VPS data collection subsystem, a navigation subsystem, and a high-level control/strategy subsystem.</p>
 			<p>A full copy of our C code is available <a href="code/SirLancebot-Final.zip">here</a>.</p>
 			<h2>VPS Data Collection</h2>
