Added h1 to homepage

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		
 		</nav>
     	<div id="main" role="main">
+			<h1 style="display:inline;">Team 17 - Sir Lancebot</h1>
 			<img src="img/teampic.jpg" class="home-image" style="margin-left:15px;">
 			<p>The 6.270 2012 Autonomous Lego Robot Competition is designed to save the post-apocalyptic Earth. Our team designed Sir Lancelot to rise from Miasmador, the mines deep within the Earth, to gather resources to save the remaining humans. Sir Lancelot was designed by Tosh Goodson, Victoria Gunning, and Brian Alvarez.</p>
 
